--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,8 +8,8 @@
       <servlet-class>com.hackeraj.arkversionnotifier.servlets.SubscriptionServlet</servlet-class>
     </servlet>
 	<servlet>
-      <servlet-name>AVNJobServlet</servlet-name>
-      <servlet-class>com.hackeraj.arkversionnotifier.servlets.AVNJobServlet</servlet-class>
+      <servlet-name>AVNCronServlet</servlet-name>
+      <servlet-class>com.hackeraj.arkversionnotifier.servlets.AVNCronServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
@@ -17,13 +17,19 @@
       <url-pattern>/subscribe</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-      <servlet-name>AVNJobServlet</servlet-name>
-      <url-pattern>/AVNJob</url-pattern>
+      <servlet-name>AVNCronServlet</servlet-name>
+      <url-pattern>/AVNCron/*</url-pattern>
     </servlet-mapping>
-    <servlet-mapping>
-      <servlet-name>AVNJobServlet</servlet-name>
-      <url-pattern>/avnjob</url-pattern>
-    </servlet-mapping>
+    
+    <security-constraint>
+	    <web-resource-collection>
+	        <web-resource-name>AVNCron</web-resource-name>
+	        <url-pattern>/AVNCron/*</url-pattern>
+	    </web-resource-collection>
+	    <auth-constraint>
+	        <role-name>admin</role-name>
+	    </auth-constraint>
+	</security-constraint>
     
 
     <welcome-file-list>
