--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
       <servlet-name>AVNCronServlet</servlet-name>
       <servlet-class>com.hackeraj.arkversionnotifier.servlets.AVNCronServlet</servlet-class>
     </servlet>
-
+    
     <servlet-mapping>
       <servlet-name>subscriptionServlet</servlet-name>
       <url-pattern>/subscribe</url-pattern>
@@ -29,12 +29,7 @@
 	    <auth-constraint>
 	        <role-name>admin</role-name>
 	    </auth-constraint>
-	</security-constraint>
-    
-
-    <welcome-file-list>
-        <welcome-file>subscribe.jsp</welcome-file>
-    </welcome-file-list>	
+	</security-constraint>	
 		
 	<filter>
 	  <filter-name>ObjectifyFilter</filter-name>
@@ -44,6 +39,16 @@
 	  <filter-name>ObjectifyFilter</filter-name>
 	  <url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+
+	<system-properties>
+        <property name="java.util.logging.config.file" value="WEB-INF/logging.properties"/>
+    </system-properties>
+    
+    <welcome-file-list>
+        <welcome-file>subscribe.jsp</welcome-file>
+    </welcome-file-list>
+    
 	<listener>
 	  <listener-class>com.hackeraj.arkversionnotifier.datamodel.OfyHelper</listener-class>
 	</listener>
