implemented generic queue system.  Tasks placed on queue know how to process themselves.  This means that only one servlet is needed to process all tasks on all queues.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,10 @@
       <servlet-name>AVNCronServlet</servlet-name>
       <servlet-class>com.hackeraj.arkversionnotifier.servlets.AVNCronServlet</servlet-class>
     </servlet>
+	<servlet>
+      <servlet-name>QueueWorkerServlet</servlet-name>
+      <servlet-class>com.hackeraj.arkversionnotifier.servlets.QueueWorkerServlet</servlet-class>
+    </servlet>
     
     <servlet-mapping>
       <servlet-name>subscriptionServlet</servlet-name>
@@ -19,6 +23,10 @@
     <servlet-mapping>
       <servlet-name>AVNCronServlet</servlet-name>
       <url-pattern>/AVNCron/ArkBar</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+      <servlet-name>QueueWorkerServlet</servlet-name>
+      <url-pattern>/queue/worker</url-pattern>
     </servlet-mapping>
     
     <security-constraint>
